Fix footer ad on mobile

--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -334,6 +334,10 @@
   .ob_what_resp {
     padding: unset !important;
   }
+
+  @media (max-width: $breakpoint-small) {
+    display: none !important;
+  }
 }
 
 .ob-widget-items-container {
